# digital-philosophy-ecosystem

./: .gitignore  ARCHITECTURE.md
data/ctp/: confucianism.json  daoism.json  legalism.json  manifest.json  mohism.json
data/gutenberg/: manifest.json
data/huggingface/: sep_entries.json
data/internet_archive/: ia_philosophy.json
data/ndl/: ndl_records.json
data/openalex/: philosophy_works.json
data/perseus/: classical_texts.json
data/seed/: cross_tradition_pairs.yaml  east_asian_philosophy.yaml  kyoto_school.yaml  kyoto_school_graph.jsonld  south_asian_philosophy.yaml
models/philmap-e5-finetuned/: README.md  config.json  config_sentence_transformers.json
models/philmap-e5-finetuned-v2/: README.md
models/philmap-e5-finetuned-v2/eval/: similarity_evaluation_phil-expanded-eval_results.csv
models/philmap-e5-finetuned/eval/: similarity_evaluation_phil-concept-eval_results.csv
philcore/: pyproject.toml
philcore/src/philcore/: __init__.py
philgraph/src/philgraph/io/: graph_io.py
philtext/src/philtext/argument/: extractor.py
philtext/src/philtext/classify/: school.py
scripts/: case_studies.py  evaluate_classifier_production.py  fetch_ctp.py  fetch_gutenberg.py  fetch_huggingface.py  fetch_internet_archive.py  fetch_ndl.py  fetch_openalex.py  fetch_perseus.py  fetch_philpapers.py  fetch_wikidata.py  finetune_alignment.py  integrate_wikidata.py  integration_pipeline.py  resolve_all_issues.py  run_alignment_v2.py  run_concept_alignment.py  validate_pipeline.py
