[project]
name = "philcore"
version = "0.1.0"
description = "Foundation ontology and data models for the digital philosophy ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "rdflib>=7.0,<8",
    "networkx>=3.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philcore"]
